Solved overflow x issue for mobiles

--- a/app/globals.css
+++ b/app/globals.css
@@ -142,8 +142,10 @@
     @apply border-border outline-ring/50;
   }
 
+  html,
   body {
     @apply bg-background text-foreground;
+    overflow-x: clip;
   }
 
   #main-content {
